# bsr

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml
shaders/: frag.glsl  shader.frag
src/: bsr.cpp  gfx.cpp  main.cpp  rec.cpp
src/encoder/: encoder.cpp
src/encoder/include/: encoder.h
src/include/: gfx.h
src/renderer/: renderer.cpp
src/renderer/include/: renderer.h
